--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vidrip",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Quickly and easily download an entire channel on YouTube",
   "main": "app.js",
   "scripts": {
@@ -18,5 +18,14 @@
     "commander": "^2.9.0",
     "sync-request": "^2.1.0",
     "youtube-dl": "^1.10.5"
-  }
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mhsjlw/vidrip.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mhsjlw/vidrip/issues"
+  },
+  "homepage": "https://github.com/mhsjlw/vidrip#readme"
 }
