--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "preferGlobal": "true",
   "bin": {
-    "vidrip" : "app.js"
+    "vidrip": "app.js"
   },
   "keywords": [
     "youtube",
@@ -20,7 +20,8 @@
   "license": "Unlicense",
   "dependencies": {
     "commander": "^2.9.0",
-    "sync-request": "^2.1.0"
+    "sync-request": "^2.1.0",
+    "youtube-audio-stream": "0.0.16"
   },
   "devDependencies": {},
   "repository": {
