--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "Unlicense",
   "dependencies": {
     "commander": "^2.9.0",
+    "jsesc": "^0.5.0",
     "sync-request": "^2.1.0",
     "youtube-audio-stream": "0.0.16"
   },
