--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vidrip",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Quickly and easily download an entire channel on YouTube",
   "main": "app.js",
   "scripts": {
@@ -17,10 +17,12 @@
     "mp3"
   ],
   "author": "mhsjlw <mhsjlw@aol.com>",
-  "contributor": [{
-    "name": "Matthewacon",
-    "email": "matthewjbarichello@gmail.com"
-  }],
+  "contributor": [
+    {
+      "name": "Matthewacon",
+      "email": "matthewjbarichello@gmail.com"
+    }
+  ],
   "license": "Unlicense",
   "dependencies": {
     "commander": "^2.9.0",
