--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "vidrip",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Quickly and easily download an entire channel on YouTube",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "preferGlobal": "true",
   "bin": {
-    "vidrip": "app.js"
+    "vidrip": "index.js"
   },
   "keywords": [
     "youtube",
@@ -16,19 +16,22 @@
     "downloader",
     "mp3"
   ],
-  "author": "mhsjlw <mhsjlw@aol.com>",
+  "author": "mhsjlw",
   "contributors": [
     {
       "name": "Matthewacon",
       "email": "matthewjbarichello@gmail.com"
     }
   ],
-  "license": "Unlicense",
+  "license": "MIT",
   "dependencies": {
+    "chalk": "^2.3.0",
     "commander": "^2.9.0",
-    "jsesc": "^0.5.0",
-    "sync-request": "^2.1.0",
-    "youtube-audio-stream": "0.0.16"
+    "filenamify": "^2.0.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "request": "^2.83.0",
+    "request-promise-native": "^1.0.5",
+    "ytdl-core": "^0.18.7"
   },
   "repository": {
     "type": "git",
